--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             </div>
         </nav>
 
-        <header class="d-flex flex-column align-items-start justify-content-center" style="height: 758px;">
+        <header class="index-header d-flex flex-column align-items-start justify-content-center" style="height: 758px;">
             <div class="text-start" style="width: 50%;">
                 <h1>Пусть ваш дом будет уникальным</h1>
                 <p>Существует много вариаций Lorem Ipsum, которые можно использовать</p>
@@ -139,7 +139,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center mbottom-16">
                         <div class="text-start">
-                            <span>26 Декабрь,2022</span>
+                            <span class="blog-card-date">26 Декабрь,2022</span>
                         </div>
                         <a href="#" class="small-modern-arrow d-flex justify-content-center align-items-center">
                             <img src="../img/SmallArrow.png" alt=">">
@@ -158,7 +158,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center mbottom-16">
                         <div class="text-start">
-                            <span>26 Декабрь,2022</span>
+                            <span class="blog-card-date">26 Декабрь,2022</span>
                         </div>
                         <a href="#" class="small-modern-arrow d-flex justify-content-center align-items-center">
                             <img src="../img/SmallArrow.png" alt=">">
@@ -177,7 +177,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center mbottom-16">
                         <div class="text-start">
-                            <span>26 Декабрь,2022</span>
+                            <span class="blog-card-date">26 Декабрь,2022</span>
                         </div>
                         <a href="#" class="small-modern-arrow d-flex justify-content-center align-items-center">
                             <img src="../img/SmallArrow.png" alt=">">
